Changes for 1.2.7
* New game property, "Unit Placement Restrictions", and new Unit Attachment option, <option name="unitPlacementRestrictions" value="territory1:territory2"/>, prevent a unit or units from being placed in any given territory. (veqryn)

* Beginning work on Unit Placement Restrictions. (veqryn)

* Moore AI's casualty picking fixed to work with all maps, not just ww2vX maps. (veqryn)

* Caching of game data to speed up dynamix ai and multiple battle calcing in one turn.  And another patch for Dynamix AI. (wisconsin)

* Added new method for Moore AI to move unused transports back to factories. (wisconsin)

* Fix for Moore AI moving units towards capitals already conquered, and not letting units leave once they get there. (wisconsin)

* Fix for Null Pointer error in Moore AI's factory movement. (veqryn)

* Fix for Null Pointer error in Moore AI's movePlanesHomeNonCom. (veqryn)

* Fix for Moore AI's horrible purchasing of transportable land units, which often resulted in the purchase of no land units. This also fixes the 'moore ai buying too many sea transports' issue. (veqryn)

* Added new method for Moore AI to move landlocked units to coastal territories if amphibious (wisconsin), and fixed the purchasing of Transports to purchase land when needed and transports when needed, hopefully without over-purchasing either. (veqryn)

* Added new option for alliedExclusionTerritories: "controlledNoWater", which will not count water or impassible territories. (veqryn)

* Major patch for Dynamix AI. Updated battle calc to cache sorted casualty lists. (wisconsin)

* Created a map skin for Middle Earth based on the alterate relief tiles. (veqryn)

* Added Middle Earth 12 player map, thanks to original creators: (flanagany and ajmdemen)

* Balancing changes to Napoleonic Empires, removed a connection, added fortress to majorca, removed tower from catalonia, changed two fortresses in candia into chasseurs. (veqryn)
